app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
        config: "1"
    spec:
      containers:
        - name: api
          image: gcr.io/shopify-sms/shopify-sms:0.8
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker
  template:
    metadata:
      labels:
        name: worker
        config: "1"
    spec:
      containers:
        - name: worker
          image: gcr.io/shopify-sms/shopify-sms-worker:0.8
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: api-web
spec:
  type: NodePort
  selector:
    name: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-edge
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "shopify-sms"
spec:
  tls:
    - secretName: shopify-sms.apps
  backend:
    serviceName: api-web
    servicePort: 80
